fix: nav bar is always visible

--- a/day26-chengquan/css/header.css
+++ b/day26-chengquan/css/header.css
@@ -7,7 +7,7 @@ header {
   color: #c8c8c8;
   height: 71px;
   font-size: 16px;
-  z-index: 1;
+  z-index: 99;
 }
 
 html:not([data-scroll="0"]) header {
